[tool.poetry]
name = "flask-google-fonts"
version = "1.0.0"
description = "Add fast-rendering Google Fonts to your Flask app."
authors = ["Caleb Ely <le717@users.noreply.github.com>"]
license = "Public domain"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
